# tossr

./: .gitignore  README.md  package-lock.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: app.tsx  index.css  main.tsx
client/src/config/: env.ts
client/src/hooks/: use-wallet-auth.ts
client/src/lib/: api.ts  session.ts
client/src/providers/: auth-provider.tsx  wallet-provider.tsx
client/src/services/: analytics.service.ts  auth.service.ts  bets.service.ts  markets.service.ts  rounds.service.ts
contracts/anchor/: Anchor.toml  Cargo.toml
contracts/anchor/programs/tossr-engine/: Cargo.toml
contracts/anchor/programs/tossr-engine/src/: lib.rs
contracts/tee-engine/: Cargo.toml
contracts/tee-engine/src/: lib.rs
server/: README.md  check-markets.js  package-lock.json  package.json  tsconfig.json
server/docs/: TOSSR.md
server/scripts/: init-missing-markets.js  scan-market-indices.js
server/src/: server.ts
server/src/config/: admin-keypair.ts  database.ts  env.ts  mongodb.ts  plugins.ts  redis.ts  solana.ts
server/src/idl/: tossr_engine.json
server/src/jobs/: index.ts  queue-config.ts
server/src/prisma/: schema.prisma
server/src/scripts/: bootstrap-er-demo.ts  check-market-delegation.ts  check-round-delegation.ts  check-round-timing.ts  check-rounds.ts  cleanup-stuck-rounds.ts  clear-all-rounds.ts  create-market.ts  force-lock-round.ts  import-legacy-markets.ts  init-missing-markets.ts  list-markets.ts  request-vrf.ts  reset-rounds.ts  seed-markets.ts  test-lock.ts  (+5 more)
server/tmp/: bettor-demo.json
(+107 files in other folders)
