[package]
name = "tossr-tee-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "generate_keypair"
path = "src/bin/generate_keypair.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
secp256k1 = { version = "0.27", features = ["rand", "recovery", "global-context"] }
rand_core = "0.6"
getrandom = { version = "0.2", features = ["rdrand"] }
borsh = "0.10.3"
bytemuck = "1.14"
